# AdventOfAction

./: .gitignore  .pre-commit-config.yaml  .pyre_configuration  README.md  action.yaml  pyproject.toml
.github/actions/run-benchmarks/: action.yaml  run_benchmarks.py  test_run_benchmarks.py
.github/workflows/: functional_tests.yaml  lint.yaml  lint.yml  run_solutions.yaml  test.yaml  unit_tests.yaml
advent_of_action/: __init__.py  main.py  run_benchmarks.py  runners.py
day_99/racket_iain/: solution.rkt
day_99/who/: check_py.py
stubs/: pygount.pyi
tests/: EXPECTED_README.md  EXPECTED_README_2.md  EXPECTED_README_3.md  EXPECTED_README_4.md  README.md  README_TEMPLATE.md  README_TEMPLATE_2.md  README_TEMPLATE_3.md  __init__.py  test_main.py  test_run_benchmarks.py
tests/day_99/: answers.gpg  input.gpg
tests/day_99/fsharp_iain/: solution.fsx
tests/day_99/go_iain/: go.mod  hello.go
tests/day_99/haskell_iain/: LICENSE  solution.cabal
tests/day_99/haskell_iain/app/: Main.hs
tests/day_99/jupyter_iain/: solution.ipynb
tests/day_99/ocaml_iain/: solution.ml
tests/day_99/python_iain/: __init__.py  solution.py
tests/day_99/python_nain/: solution.py
tests/day_99/python_optout/: solution.py
tests/day_99/python_zain/: __init__.py  does_nothing.py  solution.py
tests/day_99/rust_iain/src/: main.rs
