[project]
name = "advent_of_action"
version = "0.1.0"
description = ""
authors = [
    {name = "Iain-S",email = "25081046+Iain-S@users.noreply.github.com "}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython (>=8.32.0,<9.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "pybadges (>=3.0.1,<4.0.0)",
]

[project.optional-dependencies]
coverage = ["pybadges[coverage] (>=3.0.1,<4.0.0)", "coverage[coverage] (>=7.6.12,<8.0.0)", "standard-imghdr[coverage] (>=3.13.0,<4.0.0)", "setuptools[coverage] (>=75.8.0,<76.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyre-check = "^0.9.23"
coverage = "^7.6.12"

[tool.ruff]
# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.13
target-version = "py313"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["B", "D", "E", "F", "I", "SIM", "UP"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
